# fluentPathRAG

./: .env.example  README.md  pyproject.toml  requirements.txt  results_fluent_pathrag_vs_pathrag.csv  results_longform_fluent_vs_concat_detailed.csv  results_longform_fluent_vs_concat_summary.csv
rag_eval/: cli.py  config.py  data.py  formatters.py  metrics.py  openai_client.py  runner.py
scripts/: run_eval.py
